--- a/week-2/css/styles.css
+++ b/week-2/css/styles.css
@@ -5,7 +5,8 @@
 }
 
 h1 {
-	font-family: Brushstroke, fantasy;
+	font-family: Berlin Sans FB;
+	font-size: 300%;
 	color: #000000;
 	text-align: center;
 }
@@ -35,7 +36,7 @@ section {
 	background-color: #00FF99;
 	width: 100%;
 	height: 200px;
-	font-family: Helvetica;
+	font-family: Helvetica 400;
 	color: black;
 	position: relative;
 	overflow: auto;
